[project]
name = "sheetforge"
version = "0.1.0"
description = "D&D 5e character creation and tracking web app"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "flask-login>=0.6",
    "flask-wtf>=1.2",
    "d20>=1.1",
    "python-dotenv>=1.0",
    "werkzeug>=3.0",
    "gunicorn>=22.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
